--- a/lumatafinal.html
+++ b/lumatafinal.html
@@ -91,7 +91,7 @@
                         navigator.msGetUserMedia;
     
     //var cameraStream='';
-    //hello
+    //hello hello
     function startt(){
             navigator.getMedia({
                 video: true,
