--- a/lumatafinal.html
+++ b/lumatafinal.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.WebRTC-Experiment.com/MediaStreamRecorder.js"></script>
     <script src="https://cdn.WebRTC-Experiment.com/gumadapter.js"></script>
     <link rel="stylesheet" href="https://cdn.webrtc-experiment.com/style.css">
-    <link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">
+ <!--   <link rel="author" type="text/html" href="https://plus.google.com/+MuazKhan">-->
     <style>
         input {
             border: 1px solid rgb(46, 189, 235);
@@ -38,8 +38,7 @@
 
             <video id="video1" width="500" height ="500" autoplay></video>
 
-            <input type="button" id="startbt" value="Request Camera"/>
-            <input type="button" id="stopbt" value="Stop Camera"/>  
+          
 
             <br>
             <br>
